--- a/frontend/styles/global/themes.css
+++ b/frontend/styles/global/themes.css
@@ -39,36 +39,36 @@
 /* Theme variables */
 html {
   /* light */
-  --brand-light: var(--orange-6);
-  --text-1-light: var(--gray-8);
-  --text-2-light: var(--gray-7);
-  --surface-1-light: var(--gray-0);
-  --surface-2-light: var(--gray-1);
-  --surface-3-light: var(--gray-2);
-  --surface-4-light: var(--gray-3);
-  --surface-shadow-light: var(--gray-8-hsl);
+  --brand-light: var(--indigo-6);
+  --text-1-light: var(--stone-10);
+  --text-2-light: var(--stone-8);
+  --surface-1-light: var(--stone-0);
+  --surface-2-light: var(--stone-1);
+  --surface-3-light: var(--stone-2);
+  --surface-4-light: var(--stone-3);
+  --surface-shadow-light: var(--stone-8-hsl);
   --shadow-strength-light: 2%;
 
   /* dark */
-  --brand-dark: var(--orange-3);
-  --text-1-dark: var(--gray-3);
-  --text-2-dark: var(--gray-5);
-  --surface-1-dark: var(--gray-12);
-  --surface-2-dark: var(--gray-11);
-  --surface-3-dark: var(--gray-10);
-  --surface-4-dark: var(--gray-9);
-  --surface-shadow-dark: var(--gray-12-hsl);
+  --brand-dark: var(--indigo-3);
+  --text-1-dark: var(--stone-3);
+  --text-2-dark: var(--stone-5);
+  --surface-1-dark: var(--stone-12);
+  --surface-2-dark: var(--stone-11);
+  --surface-3-dark: var(--stone-10);
+  --surface-4-dark: var(--stone-9);
+  --surface-shadow-dark: var(--stone-12-hsl);
   --shadow-strength-dark: 80%;
 
   /* dim */
-  --brand-dim: var(--orange-4);
-  --text-1-dim: var(--gray-3);
-  --text-2-dim: var(--gray-4);
-  --surface-1-dim: var(--gray-8);
-  --surface-2-dim: var(--gray-7);
-  --surface-3-dim: var(--gray-6);
-  --surface-4-dim: var(--gray-5);
-  --surface-shadow-dim: var(--gray-9-hsl);
+  --brand-dim: var(--indigo-4);
+  --text-1-dim: var(--stone-3);
+  --text-2-dim: var(--stone-4);
+  --surface-1-dim: var(--stone-10);
+  --surface-2-dim: var(--stone-9);
+  --surface-3-dim: var(--stone-8);
+  --surface-4-dim: var(--stone-7);
+  --surface-shadow-dim: var(--stone-9-hsl);
   --shadow-strength-dim: 20%;
 
 }
