--- a/src/_partials/home/_beliefs.erb
+++ b/src/_partials/home/_beliefs.erb
@@ -1,16 +1,18 @@
 <section class="region" id="beliefs">
     <div class="container" data-layout="full-bleed">
         <header>
+        <hgroup class="flow">
             <h2>It doesn't have to be this way</h2>
+            <p>With the right strategies and support, you can break free from these challenges and build a thriving, sustainable business that works for you — not the other way around.</p>
+        </hgroup>
         </header>
-        <p>With the right strategies and support, you can break free from these challenges and build a thriving, sustainable business that works for you — not the other way around.</p>
     </div>
 </section>
 
 <style>
 
 #beliefs {
-    background-color: var(--surface-3);
+    background-color: var(--surface-4);
     }
 
 </style>
