--- a/src/_partials/home/_benefits.erb
+++ b/src/_partials/home/_benefits.erb
@@ -2,7 +2,7 @@
     <div class="container flow">
 
         <div class="grid">
-            <header class="">
+            <header>
                 <hgroup>
                     <p class="section-label">Benefits</p>
                     <h2>Unlock Your Full Potential</h2>
