--- a/src/_partials/home/_features.erb
+++ b/src/_partials/home/_features.erb
@@ -1,6 +1,6 @@
 <section class="region" id="features">
     <div class="container">
-        <header class="">
+        <header class="section-header">
             <hgroup>
                 <h2>Features</h2>
                 <p>Component to display text and image.</p>
