--- a/src/_partials/home/_features_section.erb
+++ b/src/_partials/home/_features_section.erb
@@ -1,6 +1,6 @@
 <section class="region" id="features">
-    <div class="container">
-        <header class="">
+    <div class="container flow">
+        <header class="section-header">
             <hgroup>
                 <p class="section-label">Features</p>
                 <h2>What's Included When You Work With Us</h2>
