--- a/src/_partials/home/_hero_single.erb
+++ b/src/_partials/home/_hero_single.erb
@@ -1,7 +1,7 @@
 <%# TODO: refactor into a component with multiple versions %>
 <section id="hero" class="flow" data-layout="hero-single">
     <div class="container">
-        <hgroup>
+        <hgroup class="section-header">
             <h1><%= data.title %></h1>
             <p><%= data.subtitle %></p>
         </hgroup>
@@ -11,7 +11,7 @@
 <section id="hero" data-layout="hero-split">
     <div class="container">
         <div class="grid" data-layout="50-50">
-            <hgroup>
+            <hgroup class="section-header">
                 <h1><%= data.title %></h1>
                 <p><%= data.subtitle %></p>
             </hgroup>
