--- a/src/_partials/home/_problems.erb
+++ b/src/_partials/home/_problems.erb
@@ -1,6 +1,6 @@
 <section class="region" id="problems">
     <div class="container flow">
-        <header class="">
+        <header class="section-header">
             <hgroup>
                 <p class="section-label">Problem</p>
                 <h2>Is Your Business Stuck in Neutral?</h2>
