--- a/src/_partials/home/_process.erb
+++ b/src/_partials/home/_process.erb
@@ -1,6 +1,6 @@
 <section class="" id="process">
-    <div class="container">
-        <header class="">
+    <div class="container flow">
+        <header class="section-header">
             <hgroup>
                 <div class="section-label">Process</div>
                 <h2>Your Path to Business Transformation</h2>
