--- a/frontend/styles/blocks/_all.css
+++ b/frontend/styles/blocks/_all.css
@@ -1,5 +1,8 @@
+@import 'blockquote.css';
 @import 'button.css';
 @import 'card.css';
 @import 'hero.css';
+@import 'lite-youtube.css';
+@import 'pagination.css';
 @import 'prose.css';
 @import 'skip-link.css';
