--- a/frontend/styles/global/_all.css
+++ b/frontend/styles/global/_all.css
@@ -3,5 +3,5 @@
 @import 'variables.css';
 @import "global-styles.css";
 @import 'layout.css';
-/* @import 'code.css'; */
+@import 'code.css';
 @import 'themes.css';
