--- a/frontend/styles/global/code.css
+++ b/frontend/styles/global/code.css
@@ -1,219 +1,368 @@
 /* 
-  Syntax Highlighting for Code Snippets
+  Syntax Highlighting for Code Snippets - Monokai Theme
 
   https://www.bridgetownrb.com/docs/liquid/tags#stylesheets-for-syntax-highlighting
 
-  Other styles available eg. https://github.com/jwarby/jekyll-pygments-themes
-  To use another style, delete all styles in this file and replace them with
-  the new styles. Or create your own!
-
+  Updated Monokai theme to work with our sand-based theming system and Utopia spacing.
+  Maintains the classic Monokai dark aesthetic while integrating with design tokens.
 */
 
 code {
   padding: 0.125em 0.4em;
   font-family: var(--font-mono);
-  /* background: var(--color-dark); */
-  background-color: #272822;
-  border-radius: var(--border-radius);
-  color: var(--color-light);
-  font-size: var(--font-size-fluid-1);
+  background: var(--surface-4);
+  border-radius: var(--radius-s);
+  color: var(--text-1);
+  font-size: var(--step--1);
 }
 
 pre.highlight {
-  padding: var(--size-fluid-1);
-  /* background-color: var(--color-dark); */
+  padding: var(--space-s);
   background-color: #272822;
-  border-radius: var(--border-radius);
+  border-radius: var(--radius-s);
+  overflow-x: auto;
+  border: 1px solid #3e3d32;
+  font-size: var(--step--1);
+  line-height: var(--leading-standard);
+  width: 100%;
+  margin-inline: 0;
 }
 
-/* Monokai theme */
-.highlight .hll {
+/* Theme-aware code blocks */
+:where([data-theme="light"]) pre.highlight {
   background-color: #272822;
+  border-color: #3e3d32;
 }
+
+:where([data-theme="dark"]) pre.highlight {
+  background-color: #1e1f1c;
+  border-color: #2e2f2c;
+}
+
+:where([data-theme="dim"]) pre.highlight {
+  background-color: #232420;
+  border-color: #333430;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root pre.highlight {
+    background-color: #232420;
+    border-color: #333430;
+  }
+}
+
+/* Monokai theme colors */
+.highlight .hll {
+  background-color: #49483e;
+}
+
 .highlight .c {
   color: #75715e;
-} /* Comment */
+}
+
+/* Comment */
 .highlight .err {
   color: #960050;
   background-color: #1e0010;
-} /* Error */
+}
+
+/* Error */
 .highlight .k {
   color: #66d9ef;
-} /* Keyword */
+}
+
+/* Keyword */
 .highlight .l {
   color: #ae81ff;
-} /* Literal */
+}
+
+/* Literal */
 .highlight .n {
   color: #f8f8f2;
-} /* Name */
+}
+
+/* Name */
 .highlight .o {
   color: #f92672;
-} /* Operator */
+}
+
+/* Operator */
 .highlight .p {
   color: #f8f8f2;
-} /* Punctuation */
+}
+
+/* Punctuation */
 .highlight .cm {
   color: #75715e;
-} /* Comment.Multiline */
+}
+
+/* Comment.Multiline */
 .highlight .cp {
   color: #75715e;
-} /* Comment.Preproc */
+}
+
+/* Comment.Preproc */
 .highlight .c1 {
   color: #75715e;
-} /* Comment.Single */
+}
+
+/* Comment.Single */
 .highlight .cs {
   color: #75715e;
-} /* Comment.Special */
+}
+
+/* Comment.Special */
 .highlight .ge {
   font-style: italic;
-} /* Generic.Emph */
+}
+
+/* Generic.Emph */
 .highlight .gs {
-  font-weight: bold;
-} /* Generic.Strong */
+  font-weight: var(--font-bold);
+}
+
+/* Generic.Strong */
 .highlight .kc {
   color: #66d9ef;
-} /* Keyword.Constant */
+}
+
+/* Keyword.Constant */
 .highlight .kd {
   color: #66d9ef;
-} /* Keyword.Declaration */
+}
+
+/* Keyword.Declaration */
 .highlight .kn {
   color: #f92672;
-} /* Keyword.Namespace */
+}
+
+/* Keyword.Namespace */
 .highlight .kp {
   color: #66d9ef;
-} /* Keyword.Pseudo */
+}
+
+/* Keyword.Pseudo */
 .highlight .kr {
   color: #66d9ef;
-} /* Keyword.Reserved */
+}
+
+/* Keyword.Reserved */
 .highlight .kt {
   color: #66d9ef;
-} /* Keyword.Type */
+}
+
+/* Keyword.Type */
 .highlight .ld {
   color: #e6db74;
-} /* Literal.Date */
+}
+
+/* Literal.Date */
 .highlight .m {
   color: #ae81ff;
-} /* Literal.Number */
+}
+
+/* Literal.Number */
 .highlight .s {
   color: #e6db74;
-} /* Literal.String */
+}
+
+/* Literal.String */
 .highlight .na {
   color: #a6e22e;
-} /* Name.Attribute */
+}
+
+/* Name.Attribute */
 .highlight .nb {
   color: #f8f8f2;
-} /* Name.Builtin */
+}
+
+/* Name.Builtin */
 .highlight .nc {
   color: #a6e22e;
-} /* Name.Class */
+}
+
+/* Name.Class */
 .highlight .no {
   color: #66d9ef;
-} /* Name.Constant */
+}
+
+/* Name.Constant */
 .highlight .nd {
   color: #a6e22e;
-} /* Name.Decorator */
+}
+
+/* Name.Decorator */
 .highlight .ni {
   color: #f8f8f2;
-} /* Name.Entity */
+}
+
+/* Name.Entity */
 .highlight .ne {
   color: #a6e22e;
-} /* Name.Exception */
+}
+
+/* Name.Exception */
 .highlight .nf {
   color: #a6e22e;
-} /* Name.Function */
+}
+
+/* Name.Function */
 .highlight .nl {
   color: #f8f8f2;
-} /* Name.Label */
+}
+
+/* Name.Label */
 .highlight .nn {
   color: #f8f8f2;
-} /* Name.Namespace */
+}
+
+/* Name.Namespace */
 .highlight .nx {
   color: #a6e22e;
-} /* Name.Other */
+}
+
+/* Name.Other */
 .highlight .py {
   color: #f8f8f2;
-} /* Name.Property */
+}
+
+/* Name.Property */
 .highlight .nt {
   color: #f92672;
-} /* Name.Tag */
+}
+
+/* Name.Tag */
 .highlight .nv {
   color: #f8f8f2;
-} /* Name.Variable */
+}
+
+/* Name.Variable */
 .highlight .ow {
   color: #f92672;
-} /* Operator.Word */
+}
+
+/* Operator.Word */
 .highlight .w {
   color: #f8f8f2;
-} /* Text.Whitespace */
+}
+
+/* Text.Whitespace */
 .highlight .mf {
   color: #ae81ff;
-} /* Literal.Number.Float */
+}
+
+/* Literal.Number.Float */
 .highlight .mh {
   color: #ae81ff;
-} /* Literal.Number.Hex */
+}
+
+/* Literal.Number.Hex */
 .highlight .mi {
   color: #ae81ff;
-} /* Literal.Number.Integer */
+}
+
+/* Literal.Number.Integer */
 .highlight .mo {
   color: #ae81ff;
-} /* Literal.Number.Oct */
+}
+
+/* Literal.Number.Oct */
 .highlight .sb {
   color: #e6db74;
-} /* Literal.String.Backtick */
+}
+
+/* Literal.String.Backtick */
 .highlight .sc {
   color: #e6db74;
-} /* Literal.String.Char */
+}
+
+/* Literal.String.Char */
 .highlight .sd {
   color: #e6db74;
-} /* Literal.String.Doc */
+}
+
+/* Literal.String.Doc */
 .highlight .s2 {
   color: #e6db74;
-} /* Literal.String.Double */
+}
+
+/* Literal.String.Double */
 .highlight .se {
   color: #ae81ff;
-} /* Literal.String.Escape */
+}
+
+/* Literal.String.Escape */
 .highlight .sh {
   color: #e6db74;
-} /* Literal.String.Heredoc */
+}
+
+/* Literal.String.Heredoc */
 .highlight .si {
   color: #e6db74;
-} /* Literal.String.Interpol */
+}
+
+/* Literal.String.Interpol */
 .highlight .sx {
   color: #e6db74;
-} /* Literal.String.Other */
+}
+
+/* Literal.String.Other */
 .highlight .sr {
   color: #e6db74;
-} /* Literal.String.Regex */
+}
+
+/* Literal.String.Regex */
 .highlight .s1 {
   color: #e6db74;
-} /* Literal.String.Single */
+}
+
+/* Literal.String.Single */
 .highlight .ss {
   color: #e6db74;
-} /* Literal.String.Symbol */
+}
+
+/* Literal.String.Symbol */
 .highlight .bp {
   color: #f8f8f2;
-} /* Name.Builtin.Pseudo */
+}
+
+/* Name.Builtin.Pseudo */
 .highlight .vc {
   color: #f8f8f2;
-} /* Name.Variable.Class */
+}
+
+/* Name.Variable.Class */
 .highlight .vg {
   color: #f8f8f2;
-} /* Name.Variable.Global */
+}
+
+/* Name.Variable.Global */
 .highlight .vi {
   color: #f8f8f2;
-} /* Name.Variable.Instance */
+}
+
+/* Name.Variable.Instance */
 .highlight .il {
   color: #ae81ff;
-} /* Literal.Number.Integer.Long */
+}
 
-.highlight .gh {
-} /* Generic Heading & Diff Header */
+/* Literal.Number.Integer.Long */
+
+.highlight .gh {}
+
+/* Generic Heading & Diff Header */
 .highlight .gu {
   color: #75715e;
-} /* Generic.Subheading & Diff Unified/Comment? */
+}
+
+/* Generic.Subheading & Diff Unified/Comment? */
 .highlight .gd {
   color: #f92672;
-} /* Generic.Deleted & Diff Deleted */
+}
+
+/* Generic.Deleted & Diff Deleted */
 .highlight .gi {
   color: #a6e22e;
-} /* Generic.Inserted & Diff Inserted */
+}
+
+/* Generic.Inserted & Diff Inserted */
