--- a/frontend/styles/global/global-styles.css
+++ b/frontend/styles/global/global-styles.css
@@ -11,7 +11,7 @@ body {
   min-height: 100vh;
   background: var(--surface-1);
   color: var(--text-1);
-  font-size: var(--font-size-fluid-1);
+  font-size: var(--step-0);
   font-family: var(--font-sans);
   line-height: var(--leading-standard);
   font-size-adjust: from-font;
@@ -29,17 +29,22 @@ main {
 }
 
 h1 {
-  font-size: var(--font-size-fluid-4);
+  font-size: var(--step-5);
   /* max-width: 20ch; */
 }
 
 h2 {
-  font-size: var(--font-size-fluid-2);
+  font-size: var(--step-3);
   /* max-width: 35ch; */
 }
 
 h3 {
-  font-size: var(--font-size-fluid-1);
+  font-size: var(--step-2);
+  /* max-width: 35ch; */
+}
+
+h4 {
+  font-size: var(--step-1);
   /* max-width: 35ch; */
 }
 
@@ -51,7 +56,8 @@ h3 {
 }
 
 small {
-  font-size: var(--font-size-fluid-0);
+  font-size: var(--step--1);
+  color: var(--text-2);
 }
 
 ins {
@@ -159,7 +165,7 @@ blockquote {
 blockquote footer {
   margin-block-start: var(--space-s);
   color: var(--text-2);
-  font-size: var(--size-step-0);
+  font-size: var(--step-0);
 }
 
 blockquote q {
@@ -181,7 +187,7 @@ img {
 
 figcaption {
   padding-block-start: 0.5em;
-  font-size: var(--size-step-0);
+  font-size: var(--step-0);
   font-family: monospace;
 }
 
@@ -263,7 +269,7 @@ a:not([class]):hover {
 
 ::selection {
   color: var(--text-1);
-  background: var(--brand);
+  background: var(--surface-4);
 }
 
 hr {
@@ -290,11 +296,11 @@ svg[role='img'][width][height] {
 
 /* There's a .flow composition, but this prevents forms from having to have that applied where markup is harder to control in certain systems. It still uses the --flow-space variables though to make managing space easier */
 form {
-  --flow-space: var(--size-fluid-1);
+  --flow-space: var(--space-s);
 }
 
 form>*+*,
-form > fieldset> *+* {
+form>fieldset>*+* {
   margin-top: var(--flow-space, 1rem);
 }
 
@@ -306,7 +312,7 @@ form > fieldset> *+* {
   padding: 0.5em 0.8em;
   border-radius: var(--radius-s);
   border: var(--stroke-solid);
-  background: var(--gray-2);
+  background: var(--surface-3);
   color: var(--color-light);
   width: 100%;
 
@@ -330,12 +336,12 @@ label::after {
 label:has(input) {
   display: flex;
   align-items: baseline;
-  gap: var(--size-fluid-1);
+  gap: var(--space-s);
   font-weight: var(--font-normal);
 }
 
 label:has(input)+label:has(input) {
-  --flow-space: var(--size-fluid-1);
+  --flow-space: var(--space-s);
 }
 
 /* Slightly adjusts the vertical position of the check/radio */
@@ -353,7 +359,7 @@ label input:disabled+* {
 }
 
 fieldset {
-  border: var(--stroke);
+  border: none;
   padding: var(--space-s);
 }
 
