--- a/src/_components/shared/site_header.erb
+++ b/src/_components/shared/site_header.erb
@@ -14,7 +14,7 @@
       </button>
 
       <nav id="main-nav" class="main-nav">
-          <ul role="list">
+          <ul role="list" class="main-nav-list">
               <% site.data.nav.each do |item| %>
                   <li><%= link_to item.title, item.url %></li>
               <% end %>
