--- a/src/_partials/home/_hero_split.erb
+++ b/src/_partials/home/_hero_split.erb
@@ -30,11 +30,10 @@
     }
 
     section[data-layout="hero-split"] {
-        // padding-block: var(--size-fluid-6);
         background-color: var(--color-bg-darker);
     }
 
-    section[data-layout="hero-split"] > br-container > br-grid[data-layout="50-50"] {
+    section[data-layout="hero-split"] > .container > .grid[data-layout="50-50"] {
         --grid-alignment: center;
     }
 
