--- a/src/_partials/home/_solution.erb
+++ b/src/_partials/home/_solution.erb
@@ -9,7 +9,7 @@
                     <p></p>
                 </hgroup>
                 <button class="button">Get Started</button>
-                <button class="button" data-button-variant="secondary">Learn More</button>
+                <button class="button" data-variant="secondary">Learn More</button>
             </header>
             <div class="flow">
                 <p><b>Tired of struggling to grow your business?</b> I get it. You've put in countless hours, but success seems just out of reach. The constant worry about finding new clients and standing out in a crowded market can be overwhelming.</p>
