--- a/src/_components/shared/site_header.css
+++ b/src/_components/shared/site_header.css
@@ -1,13 +1,6 @@
-body > header > .container {
-  /* --padding-block: var(--size-fluid-2); */
-  --padding-block: 0;
-  padding-inline: var(--gutter);
-}
-
-body > header[role="banner"] {
+body>header[role="banner"] {
   box-shadow: var(--shadow-3);
 }
-
 
 /* *********************** */
 /* wrapper for site header */
@@ -16,6 +9,16 @@ body > header[role="banner"] {
   display: grid;
   grid-template-columns: max-content 1fr;
   margin-inline: auto;
+}
+
+.site-head>button {
+  --button-border-color: transparent;
+  --button-bg: transparent;
+}
+
+.site-head>button:focus {
+  outline: 1px solid var(--brand);
+  box-shadow: var(--focus-ring);
 }
 
 .site-head #logo {
@@ -35,25 +38,25 @@ body > header[role="banner"] {
   text-decoration: none;
 }
 
-
 /* '#main-nav' */
-.site-head > nav {
+.site-head>nav {
   display: var(--display, none);
   grid-column: 1 / span 2;
   justify-self: var(--justify, center);
 }
 
-.site-head > #main-nav > ul {
+.site-head>#main-nav>ul {
   list-style: none;
   display: flex;
   flex-direction: var(--flex-direction, column);
   gap: var(--gutter);
   align-items: center;
+  padding-block: var(--space-s)
 }
 
-.site-head > nav a:hover {
-    text-decoration: underline solid var(--color-primary) 2px;
-    text-underline-offset: 0.25em;
+.site-head>nav a:hover {
+  text-decoration: underline solid var(--color-primary) 2px;
+  text-underline-offset: 0.25em;
 }
 
 @media (width >=35em) {
@@ -73,7 +76,6 @@ body > header[role="banner"] {
 }
 
 /* Mobile menu button */
-
 #hamburger {
   align-items: center;
   background-color: transparent;
@@ -82,23 +84,44 @@ body > header[role="banner"] {
   display: var(--nav-button-display, flex);
   gap: 0.5em;
   justify-self: end;
-  color: inherit;
+  color: var(--text-1);
 }
 
 #hamburger[aria-expanded="true"]+#main-nav {
   --display: flex;
 }
 
-/* hamburger icon from https://remixicon.com/ */
+/* Theme-aware hamburger icons using CSS masks */
 #hamburger::after {
   content: "";
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z'%3E%3C/path%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: var(--size-fluid-2);
-  width: var(--size-fluid-2);
+  height: var(--space-s-m);
+  width: var(--space-s-m);
+  background-color: var(--text-1);
+  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z'%3E%3C/path%3E%3C/svg%3E");
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  mask-position: center;
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z'%3E%3C/path%3E%3C/svg%3E");
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: contain;
+  -webkit-mask-position: center;
+  transition: background-color 0.2s ease;
 }
 
 #hamburger[aria-expanded="true"]::after {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z'%3E%3C/path%3E%3C/svg%3E");
+  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z'%3E%3C/path%3E%3C/svg%3E");
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z'%3E%3C/path%3E%3C/svg%3E");
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: contain;
+  -webkit-mask-position: center;
+}
+
+/* Hover effect for better interactivity */
+#hamburger:hover::after {
+  background-color: var(--brand);
+}
+
+/* Focus state for accessibility */
+#hamburger:focus-visible::after {
+  background-color: var(--brand);
 }
