--- a/src/_components/shared/site_footer.erb
+++ b/src/_components/shared/site_footer.erb
@@ -12,7 +12,7 @@
 
     <nav aria-label="Quick links" class="flow">
       <h3>Quick Links</h3>
-      <ul class="footer-nav" role="list">
+      <ul class="footer-nav flow" role="list">
         <% site.data.nav.each do |item| %>
           <li>
             <%= link_to item.title, item.url %>
