--- a/frontend/styles/global/global-styles.css
+++ b/frontend/styles/global/global-styles.css
@@ -48,6 +48,16 @@ h4 {
   /* max-width: 35ch; */
 }
 
+h5 {
+  font-size: var(--step-0);
+  /* max-width: 35ch; */
+}
+
+h6 {
+  font-size: var(--step--1);
+  /* max-width: 35ch; */
+}
+
 :is(h1, h2, h3, h4):where([class*='text-step-10'],
   [class*='text-step-11'],
   [class*='text-step-12']) {
@@ -295,7 +305,7 @@ svg[role='img'][width][height] {
 }
 
 /* There's a .flow composition, but this prevents forms from having to have that applied where markup is harder to control in certain systems. It still uses the --flow-space variables though to make managing space easier */
-form {
+form * {
   --flow-space: var(--space-s);
 }
 
