--- a/src/_partials/home/_beliefs.erb
+++ b/src/_partials/home/_beliefs.erb
@@ -3,7 +3,7 @@
         <header>
         <hgroup class="flow">
             <h2>It doesn't have to be this way</h2>
-            <p>With the right strategies and support, you can break free from these challenges and build a thriving, sustainable business that works for you — not the other way around.</p>
+            <p>With the right strategies and support, you can break free from these challenges and build a thriving, sustainable business that works for you - not the other way around.</p>
         </hgroup>
         </header>
     </div>
